--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bangkit.submission2github">
+    package="com.bangkit.submission2github" >
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -9,10 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Submission2Github">
+        android:theme="@style/Theme.Submission2Github" >
+        <activity
+            android:name=".ui.activity.DetailUserActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.activity.MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
