--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
     id 'kotlin-parcelize'
 }
 
@@ -60,6 +61,10 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.5.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+
+    implementation 'androidx.room:room-runtime:2.4.2'
+    kapt 'androidx.room:room-compiler:2.4.2'
 
 
 
